<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Movie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titletite_tvshow">Tv Show Title</string>
    <string name="genre_tvshow">Tv Show Genre</string>
    <string name="desc_tvshow">Tv Show Decription </string>
    <string name="title_movie">Movie</string>
    <string name="title_TvShow">Tv Show</string>
    <string name="titletite_movie">Movie Title</string>
    <string name="genre_movie">Movie Genre</string>
    <string name="desc_movie">Movie Description</string>
    <string name="photo">Image</string>
    <string name="title_bar_tvshow">Tv Show Catalogue</string>
    <string name="title_bar_movie">Movie Catalogue</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string-array name="item_data_title">
        <item>Aquaman(2018)</item>
        <item>Bohemian Rhapsody(2018)</item>
        <item>Avengers: Infinity War(2018)</item>
        <item>Alita:Battle Angel(2019)</item>
        <item>Cold Pursuit(2019)</item>
        <item>Creed 2 (2018)</item>
        <item>How to Train Your Dragon:The Hidden(2019)</item>
        <item>Robin Hood(2018)</item>
        <item>Fantastics Beasts: The Crimes of Grindelwald(2018)</item>
        <item>T-34(2018)</item>
    </string-array>
    <string-array name="item_data_genre">
        <item>Action, Adventure, Science Fiction</item>
        <item>Drama, Biography, Music</item>
        <item>Fantasy, Science Fiction</item>
        <item>Action, Thriller, Adventure, Science fiction, Romance, Cyberpunk</item>
        <item>Action, Drama, Thriller, Adventure, Dark Comedy</item>
        <item>Action and Adventure, Drama, Sports, Fitness</item>
        <item>Animation, Adventure, Action</item>
        <item>Action, Adventure, Thriller</item>
        <item>Fantasy, Drama, Adventure, Family</item>
        <item>Action, War</item>
    </string-array>
    <string-array name="item_data_desc">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
        <item>The quiet family life of Nels Coxman, a snowplow driver, is upended after his son\'s murder. Nels begins a vengeful hunt for Viking, the drug lord he holds responsible for the killing, eliminating Viking\'s associates one by one. As Nels draws closer to Viking, his actions bring even more unexpected and violent consequences, as he proves that revenge is all in the execution.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause-elevating wizards above all non-magical beings. The only one capable of putting a stop to him is the wizard he once called his closest friend, Albus Dumbledore. However, Dumbledore will need to seek help from the wizard who had thwarted Grindelwald once before, his former student Newt Scamander, who agrees to help, unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world.</item>
        <item>In 1944, a courageous group of Russian soldiers managed to escape from German captivity in a half-destroyed legendary T-34 tank. Those were the times of unforgettable bravery, fierce fighting, unbreakable love, and legendary miracles.</item>
    </string-array>
    <string-array name="item_data_genre_tvshow">
        <item>Action, Mystery, Crime Fiction, Adventure, Action fiction, Science Fiction, Superhero fiction</item>
        <item>Adventure fiction, Martial Arts, Fantasy</item>
        <item>Superhero, Adventure, Superhero fiction, Action, Mystery, Action fiction, Science fiction, Drama</item>
        <item>Action fiction, Police procedural, Crime fiction</item>
        <item>Action fiction, Martial Arts, Drama, Superhero fiction</item>
        <item>Animation, Action, Adventure</item>
        <item>Action, Adventure, Drama</item>
        <item>Animation, Comedy</item>
        <item>Action, Adventure, Comedy-drama, Mystery, Science fiction,, Superhero</item>
        <item>Action, Drama</item>
    </string-array>
    <string-array name="item_data_title_tvshow">
        <item>Arrow(2012)</item>
        <item>Dragon Ball(1986)</item>
        <item>The Flash(2014)</item>
        <item>Gotham(2014)</item>
        <item>Marvel\'s Iron Fist(2017)</item>
        <item>Naruto Shipudden(2007)</item>
        <item>Supergirl(2015)</item>
        <item>The Simpsons(1989)</item>
        <item>Doom Patrol(2019)</item>
        <item>Hanna(2019)</item>
    </string-array>
    <string-array name="item_data_desc_tshow">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.</item>
        <item>Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the dragon balls brought her to Goku\'s home. Together, they set off to find all seven dragon balls in an adventure.</item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel. Though initially excited by his newfound powers, Barry is shocked to discover he is not the only ("meta-human") who was created in the wake of the accelerator explosion and not everyone is using their new powers for good. Barry partners with S.T.A.R. Labs and dedicates his life to protect the innocent. For now, only a few close friends and associates know that Barry is literally the fastest man alive, but it won\'t be long before the world learns what Barry Allen has become.....The Flash.</item>
        <item>Everyone knows the name Commissioner Gordon. He is one of the crime world\'s greatest foes, a man whose reputation is synonymous with law and order. But what is known of Gordon\'s story and his rise from rookie detective to Police Commissioner? What did it take to navigate the multiple layers of corruption that secretly ruled Gotham City, the spawning ground of the world\'s most iconic villains? And what circumstances created them – the larger-than-life personas who would become Catwoman, The Penguin, The Riddler, Two-Face and The Joker?</item>
        <item>Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny.</item>
        <item>Naruto Shippuuden is the continuation of the original animated TV series Naruto.The story revolves around an older and slightly more matured Uzumaki Naruto and his quest to save his friend Uchiha Sasuke from the grips of the snake-like Shinobi, Orochimaru. After 2 and a half years Naruto finally returns to his village of Konoha, and sets about putting his ambitions to work, though it will not be easy, as He has amassed a few ("more dangerous") enemies, in the likes of the shinobi organization; Akatsuki.</item>
        <item>Twenty-four-year-old Kara Zor-El, who was taken in by the Danvers family when she was 13 after being sent away from Krypton, must learn to embrace her powers after previously hiding them. The Danvers teach her to be careful with her powers, until she has to reveal them during an unexpected disaster, setting her on her journey of heroism.</item>
        <item>Set in Springfield, the average American town, the show focuses on the antics and everyday adventures of the Simpson family; Homer, Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning, the series has been a pop culture icon, attracting hundreds of celebrities to guest star. The show has also made name for itself in its fearless satirical take on politics, media and American life in general.</item>
        <item>The Doom Patrol\’s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence — and to protect Earth from what they find.</item>
        <item>This thriller and coming-of-age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off-book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film.</item>
    </string-array>
</resources>