<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/item_photo"
        android:layout_width="78dp"
        android:layout_height="110dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        tools:src="@android:color/white"
        android:contentDescription="@string/photo" />

    <LinearLayout
        android:layout_toEndOf="@id/item_photo"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/holo_red_dark"
            tools:text="@string/titletite_movie"/>
        <TextView
            android:id="@+id/tv_item_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textSize="12sp"
            android:textColor="@color/coloring"
            android:ellipsize="end"
            android:textStyle="italic"
            android:maxLines="1"
            tools:text="@string/genre_movie"/>
        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:maxLines="3"
            android:textStyle="normal"
            tools:text="@string/desc_movie"
            />

    </LinearLayout>

</RelativeLayout>